src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Funding</fullName>
        <description>CB GM</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Granting</fullName>
        <description>CB GM</description>
        <isActive>true</isActive>
        <values>
            <fullName>Application Processing</fullName>
        </values>
        <values>
            <fullName>Application Submission</fullName>
        </values>
        <values>
            <fullName>Award</fullName>
        </values>
        <values>
            <fullName>Closeout</fullName>
        </values>
        <values>
            <fullName>Funding Opportunities</fullName>
        </values>
        <values>
            <fullName>Program Monitoring</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AmountAppliedFor__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Applied For</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountCommitted__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Committed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmountPaid__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Amount Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BudgetYearType__c</fullName>
        <defaultValue>&apos;Company&apos;</defaultValue>
        <label>Budget Year Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
                <value>
                    <fullName>Calendar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CBAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Account</label>
        <referenceTo>cb5__CBAccount__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBDivision__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Division</label>
        <referenceTo>cb5__CBDivision__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBVariable1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 1</label>
        <referenceTo>cb5__CBVariable1__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBVariable2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 2</label>
        <referenceTo>cb5__CBVariable2__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBVariable3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CB Variable 3</label>
        <referenceTo>cb5__CBVariable3__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Yet to begin</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Building</fullName>
                </value>
                <value>
                    <fullName>Commute</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Equipment</fullName>
                </value>
                <value>
                    <fullName>Medicines</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalFundAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Fund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Funds</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Fund</value>
        </filters>
        <label>Funds</label>
    </listViews>
    <listViews>
        <fullName>Grants</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Grant</value>
        </filters>
        <label>Grants</label>
    </listViews>
    <recordTypes>
        <fullName>Fund</fullName>
        <active>true</active>
        <businessProcess>Funding</businessProcess>
        <description>CloudBudget Grant Management</description>
        <label>Fund</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grant</fullName>
        <active>true</active>
        <businessProcess>Granting</businessProcess>
        <description>CloudBudget Grant Management</description>
        <label>Grant</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>